--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
     <div class="borde">
       <h4>1- ¿En qué año se adopta SIRGAS?</h4>
       <hr>
-      <input type="radio" name="q1" value="a">a- año de implementación 2003
+      <input type="radio" name="q1" value="a">a- Año de implementación 2003
       <hr>
-      <input type="radio" name="q1" value="b">b- año de adopción 2000
+      <input type="radio" name="q1" value="b">b- Año de adopción 2000
       <hr>
-      <input type="radio" name="q1" value="c">c- año de implementación 2013
+      <input type="radio" name="q1" value="c">c- Año de implementación 2013
     </div>
     <div class="borde">
       <h4>2- ¿Cómo se orientaban las antiguas triangulaciones geodésicas?</h4>
       <hr>
       <input type="radio" name="q2" value="a">a- Se orientaban con Puntos Laplace
       <hr>
-      <input type="radio" name="q2" value="b">b- Se calculaba la desviación de la vertical, con la diferencia de latitud geodésica "normal al elipsoide" y latitud astronómica "normal al geoide"
+      <input type="radio" name="q2" value="b">b- Se calculaba la desviación de la vertical, con la diferencia de latitud geodésica "Normal al elipsoide" y latitud astronómica "Normal al geoide"
       <hr>
       <input type="radio" name="q2" value="c">c- a y b son correctas
     </div>
@@ -42,7 +42,7 @@
       <input type="radio" name="q3" value="a">a- Se hacían observaciones a estrellas seleccionadas para determinar la posición de ese punto sobre la superficie de la tierra<hr>
       <input type="radio" name="q3" value="b">b- Desde las posiciones astronómicas se podría tener un error de cientos de metros
       <hr>
-      <input type="radio" name="q3" value="c">c- Cada continente estaba virtualmente "posicionalmente" aislado y su interrelación se conocía de manera imprecisa
+      <input type="radio" name="q3" value="c">c- Cada continente estaba virtualmente "Posicionalmente" aislado y su interrelación se conocía de manera imprecisa
       <hr>
       <input type="radio" name="q3" value="d">d- Todas las alternativas son correctas
     </div>
@@ -63,7 +63,7 @@
       <hr>
       <input type="radio" name="q5" value="c">c- Monitorear el entorno "MEO"
       <hr>
-      <input type="radio" name="q5" value="d">d- Generar señales GALILEO para poder desarrollar el Segmento Usuario. Ambos satélites fueron construidos en paralelo para proporcionar redundancia en la órbita y Asegurar los objetivos de la misión, y ambos proporcionar capacidades complementarias.
+      <input type="radio" name="q5" value="d">d- Generar señales GALILEO para poder desarrollar el Segmento Usuario. Ambos satélites fueron construidos en paralelo para proporcionar redundancia en la órbita, Asegurar los objetivos de la misión y Proporcionar capacidades complementarias.
       <hr>
       <input type="radio" name="q5" value="e">e- Todas las alternativas son correctas 
     </div>
