--- a/index.html
+++ b/index.html
@@ -149,6 +149,204 @@
       <hr>
       <input type="radio" name="q14" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
+    <div class="borde">
+      <h4>15- ¿Qué son las torres BILBY?</h4>
+      <hr>
+      <input type="radio" name="q15" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q15" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q15" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>16- ¿Cúal era el principal problema del uso de la técnica-óptica?</h4>
+      <hr>
+      <input type="radio" name="q16" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q16" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q16" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>17- ¿Cómo se define "Posicionamiento por Satélite"?</h4>
+      <hr>
+      <input type="radio" name="q17" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q17" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q17" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>18- ¿Cómo se define "GNSS"?</h4>
+      <hr>
+      <input type="radio" name="q18" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q18" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q18" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>19- ¿Porqué el reloj del Receptor en tierra está desfasado?</h4>
+      <hr>
+      <input type="radio" name="q19" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q19" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q19" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>20- ¿Qué son las Pseudodistancias?</h4>
+      <hr>
+      <input type="radio" name="q20" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q20" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q20" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>21- ¿Cúantas Pseudodistancias son necesarias para resolver las ecuaciones?</h4>
+      <hr>
+      <input type="radio" name="q21" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q21" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q21" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>22- ¿Cúales eran los problemas de los primeros sistemas satelitales?</h4>
+      <hr>
+      <input type="radio" name="q22" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q22" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q22" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>23- ¿Qué son los Sistemas de Aumentación?</h4>
+      <hr>
+      <input type="radio" name="q23" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q23" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q23" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>24- ¿En qué consiste el "Almanaque"?</h4>
+      <hr>
+      <input type="radio" name="q24" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q24" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q24" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>25- ¿Cómo se determina la "Posición" mediante satélites?</h4>
+      <hr>
+      <input type="radio" name="q25" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q25" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q25" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>26- ¿Qué son los Sistemas de Aumentación?</h4>
+      <hr>
+      <input type="radio" name="q26" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q26" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q26" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>27- ¿Qué es el GDoP?</h4>
+      <hr>
+      <input type="radio" name="q27" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q27" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q27" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>28- ¿Cúales son las diferencias entre Pseudodistancias de Código y Pseudodistancias de Fase?</h4>
+      <hr>
+      <input type="radio" name="q28" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q28" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q28" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>29- ¿Qué es el "Posicionamiento Absoluto"?</h4>
+      <hr>
+      <input type="radio" name="q29" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q29" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q29" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>30- ¿Qué es el "Posicionamiento Diferencial"?</h4>
+      <hr>
+      <input type="radio" name="q30" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q30" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q30" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>31- ¿En qué consiste el "Posicionamiento Relativo"?</h4>
+      <hr>
+      <input type="radio" name="q31" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q31" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q31" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>32- ¿Cúal es la diferencia entre el "Posicionamiento Estático y Posicionamiento Cinemático" ?</h4>
+      <hr>
+      <input type="radio" name="q32" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q32" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q32" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+    <div class="borde">
+      <h4>33- ¿En qué consiste el "Tiempo Real"?</h4>
+      <hr>
+      <input type="radio" name="q33" value="a">a- Con una Helmert 3D
+      <hr>
+      <input type="radio" name="q33" value="b">b- Por el método de Mínimos Cuadrados
+      <hr>
+      <input type="radio" name="q33" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+    </div>
+     <div class="borde">
+       <h4>34- ¿En qué consiste el "Post Proceso"?</h4>
+       <hr>
+       <input type="radio" name="q34" value="a">a- Con una Helmert 3D
+       <hr>
+       <input type="radio" name="q34" value="b">b- Por el método de Mínimos Cuadrados
+       <hr>
+       <input type="radio" name="q34" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+     </div>
+      <div class="borde">
+        <h4>35- ¿En qué consiste el "Tiempo Real"?</h4>
+        <hr>
+        <input type="radio" name="q35" value="a">a- Con una Helmert 3D
+        <hr>
+        <input type="radio" name="q35" value="b">b- Por el método de Mínimos Cuadrados
+        <hr>
+        <input type="radio" name="q35" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+      </div>
+       <div class="borde">
+         <h4>36- ¿Cúal es la diferencia entre "Topografía y Navegación"?</h4>
+         <hr>
+         <input type="radio" name="q36" value="a">a- Con una Helmert 3D
+         <hr>
+         <input type="radio" name="q36" value="b">b- Por el método de Mínimos Cuadrados
+         <hr>
+         <input type="radio" name="q36" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+       </div>
     <br>
     <input type="submit" id="sendA" value="Ver Puntaje">
     <p id="rada"></p>
