--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <div class="borde">
       <h4>15- ¿Qué son las torres BILBY?</h4>
       <hr>
-      <input type="radio" name="q15" value="a">a- Con una Helmert 3D
+      <input type="radio" name="q15" value="a">a- Torres de observación topográfica especiales, debido a que su uso de Triangulación se veía limitada por la línea de visión, los Geomensores debían subir a cimas de montañas
       <hr>
       <input type="radio" name="q15" value="b">b- Por el método de Mínimos Cuadrados
       <hr>
@@ -163,7 +163,7 @@
       <hr>
       <input type="radio" name="q16" value="a">a- Con una Helmert 3D
       <hr>
-      <input type="radio" name="q16" value="b">b- Por el método de Mínimos Cuadrados
+      <input type="radio" name="q16" value="b">b- Un cielo claro simultáneamente en un mínimo de 2 sitios de observación separadas por algunos km y el Equipamiento era enorme y costoso
       <hr>
       <input type="radio" name="q16" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
@@ -174,7 +174,7 @@
       <hr>
       <input type="radio" name="q17" value="b">b- Por el método de Mínimos Cuadrados
       <hr>
-      <input type="radio" name="q17" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+      <input type="radio" name="q17" value="c">c- Es la determinación de Puntos de observación por medio de satélites artificiales, se asume que las posiciones de los satélites son conocidas en todas las épocas
     </div>
     <div class="borde">
       <h4>18- ¿Cómo se define "GNSS"?</h4>
@@ -183,32 +183,32 @@
       <hr>
       <input type="radio" name="q18" value="b">b- Por el método de Mínimos Cuadrados
       <hr>
-      <input type="radio" name="q18" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+      <input type="radio" name="q18" value="c">c- Sistema de Navegación Global por Satélite, auna todos los sistemas de posicionamiento por satélite mundial; GPS, GLONAS, GALILEO, BEIDOU
     </div>
     <div class="borde">
-      <h4>19- ¿Porqué el reloj del Receptor en tierra está desfasado?</h4>
+      <h4>19- ¿Porqué la "distancia medida" al Satélite difiere de la "distancia real" geométrica?</h4>
       <hr>
       <input type="radio" name="q19" value="a">a- Con una Helmert 3D
       <hr>
-      <input type="radio" name="q19" value="b">b- Por el método de Mínimos Cuadrados
+      <input type="radio" name="q19" value="b">b- Los Receptores en tierra utilizan Relojes de cristales de bajo costo, que se ajustan "aproximadamente" a la hora del sistema, los Relojes en tierra están desfasados y a causa de éste desplazamiento difieren las distancias 
       <hr>
       <input type="radio" name="q19" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
     <div class="borde">
-      <h4>20- ¿Qué son las Pseudodistancias?</h4>
+      <h4>20- ¿Qué son las Pseudodistancias "r"?</h4>
       <hr>
-      <input type="radio" name="q20" value="a">a- Con una Helmert 3D
+      <input type="radio" name="q20" value="a">a- Son las cantidades medidas entre el Receptor y Satélite, Representan la Distancia Geométrica + una Corrección de distancia "p" resultante del Error del reloj del receptor "sesgo"   
       <hr>
       <input type="radio" name="q20" value="b">b- Por el método de Mínimos Cuadrados
       <hr>
       <input type="radio" name="q20" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
     <div class="borde">
-      <h4>21- ¿Cúantas Pseudodistancias son necesarias para resolver las ecuaciones?</h4>
+      <h4>21- ¿Cúantas Pseudodistancias son necesarias para resolver las ecuaciones de Posición mediante satélites?</h4>
       <hr>
       <input type="radio" name="q21" value="a">a- Con una Helmert 3D
       <hr>
-      <input type="radio" name="q21" value="b">b- Por el método de Mínimos Cuadrados
+      <input type="radio" name="q21" value="b">b- Se necesitan 4 Pseudodistancias medidas simultáneamente para resolver 4 incóginitas; los 3 componentes de Posición + 1 Desviación de reloj
       <hr>
       <input type="radio" name="q21" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
@@ -217,14 +217,14 @@
       <hr>
       <input type="radio" name="q22" value="a">a- Con una Helmert 3D
       <hr>
-      <input type="radio" name="q22" value="b">b- Por el método de Mínimos Cuadrados
+      <input type="radio" name="q22" value="b">b- Grandes brechas de tiempo entre 2 pasasdas por el mismo lugar y Baja precisión de navegación, en particular la determinación era pobre
       <hr>
       <input type="radio" name="q22" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
     <div class="borde">
       <h4>23- ¿Qué son los Sistemas de Aumentación?</h4>
       <hr>
-      <input type="radio" name="q23" value="a">a- Con una Helmert 3D
+      <input type="radio" name="q23" value="a">a- Estos sistemas "Aumentan" la órbita terrestre media "MEO" con satélites Geoestacionarios "GEO", se complementan con Sistemas de aumentación basados en el espacio "SBAS" o Sistemas de aumentación basado en tierra "GBAS" 
       <hr>
       <input type="radio" name="q23" value="b">b- Por el método de Mínimos Cuadrados
       <hr>
@@ -233,52 +233,52 @@
     <div class="borde">
       <h4>24- ¿En qué consiste el "Almanaque"?</h4>
       <hr>
-      <input type="radio" name="q24" value="a">a- Con una Helmert 3D
+      <input type="radio" name="q24" value="a">a- Información sobre el estado del GNSS y datos a los usuarios, contiene el estado de la constelación, cortes programados y datos orbitales adecuados para hacer predicciones de visibilidad del satélite y efemérides precisas adecuadas para posicionamientos precisos
       <hr>
       <input type="radio" name="q24" value="b">b- Por el método de Mínimos Cuadrados
       <hr>
       <input type="radio" name="q24" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
     <div class="borde">
-      <h4>25- ¿Cómo se determina la "Posición" mediante satélites?</h4>
+      <h4>25- ¿Qué es el GDoP?</h4>
       <hr>
       <input type="radio" name="q25" value="a">a- Con una Helmert 3D
       <hr>
       <input type="radio" name="q25" value="b">b- Por el método de Mínimos Cuadrados
       <hr>
-      <input type="radio" name="q25" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+      <input type="radio" name="q25" value="c">c- Dilución Geométrica de la Precisión, suponiendo 4 satélites el GDop 6 es adecuado y bajo 6 no es deseado
     </div>
     <div class="borde">
-      <h4>26- ¿Qué son los Sistemas de Aumentación?</h4>
+      <h4>26- ¿Cúal es la exactitud de la Pseudodistancia de Código?</h4>
       <hr>
       <input type="radio" name="q26" value="a">a- Con una Helmert 3D
       <hr>
       <input type="radio" name="q26" value="b">b- Por el método de Mínimos Cuadrados
       <hr>
-      <input type="radio" name="q26" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+      <input type="radio" name="q26" value="c">c- Exactitud de metros sin ambiguedades
     </div>
     <div class="borde">
-      <h4>27- ¿Qué es el GDoP?</h4>
+      <h4>27- ¿Cúal es la exactitud de la Pseudodistancia de Fase?</h4>
       <hr>
-      <input type="radio" name="q27" value="a">a- Con una Helmert 3D
+      <input type="radio" name="q27" value="a">a- Exactitud de milímetros, ambiguedades en un número entero de longitudes de onda
       <hr>
       <input type="radio" name="q27" value="b">b- Por el método de Mínimos Cuadrados
       <hr>
       <input type="radio" name="q27" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
     <div class="borde">
-      <h4>28- ¿Cúales son las diferencias entre Pseudodistancias de Código y Pseudodistancias de Fase?</h4>
+      <h4>28- ¿CAMBIAR PREGUNTAS?</h4>
       <hr>
       <input type="radio" name="q28" value="a">a- Con una Helmert 3D
       <hr>
       <input type="radio" name="q28" value="b">b- Por el método de Mínimos Cuadrados
       <hr>
-      <input type="radio" name="q28" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+      <input type="radio" name="q28" value="c">c- Pseudodistancia de Código; exactitud metros sin ambiguedades y Pseudodistancia de Fase; exactitud milímetros 
     </div>
     <div class="borde">
       <h4>29- ¿Qué es el "Posicionamiento Absoluto"?</h4>
       <hr>
-      <input type="radio" name="q29" value="a">a- Con una Helmert 3D
+      <input type="radio" name="q29" value="a">a- Se determinan coordenadas de 1 punto, cuando único receptor mide pseudodistancias a 4 o más satélites
       <hr>
       <input type="radio" name="q29" value="b">b- Por el método de Mínimos Cuadrados
       <hr>
@@ -289,7 +289,7 @@
       <hr>
       <input type="radio" name="q30" value="a">a- Con una Helmert 3D
       <hr>
-      <input type="radio" name="q30" value="b">b- Por el método de Mínimos Cuadrados
+      <input type="radio" name="q30" value="b">b- Técnica de posicionamiento de 1 punto mejorada, se basa en aplicar correcciones a Pseudodistancias medidas en un lugar desconocido, proporciona soluciones instantáneas corrigiendo precisiones mejoradas respecto a una estación de referencia
       <hr>
       <input type="radio" name="q30" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
@@ -300,7 +300,7 @@
       <hr>
       <input type="radio" name="q31" value="b">b- Por el método de Mínimos Cuadrados
       <hr>
-      <input type="radio" name="q31" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+      <input type="radio" name="q31" value="c">c- Es posible si se utilizan 2 receptores y 2 mediciones "Código y Fase" a los mismos satélites y simultáneamente en 2 sitios, las mediciones son combinadas directamente, mejorando aún más la precisión de la posición
     </div>
     <div class="borde">
       <h4>32- ¿Cúal es la diferencia entre el "Posicionamiento Estático y Posicionamiento Cinemático" ?</h4>
@@ -309,41 +309,41 @@
       <hr>
       <input type="radio" name="q32" value="b">b- Por el método de Mínimos Cuadrados
       <hr>
-      <input type="radio" name="q32" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+      <input type="radio" name="q32" value="c">c- Estático: Denota un lugar de observación "Fijo" y Cinemático: Implica "Movimiento"
     </div>
     <div class="borde">
-      <h4>33- ¿En qué consiste el "Tiempo Real"?</h4>
+      <h4>33- ¿Cúales son las características del "Tiempo Real"?</h4>
       <hr>
       <input type="radio" name="q33" value="a">a- Con una Helmert 3D
       <hr>
-      <input type="radio" name="q33" value="b">b- Por el método de Mínimos Cuadrados
+      <input type="radio" name="q33" value="b">b- Los resultados son "instantáneos" en campo si los observables de 1 sola época se utilizan para el cálculo de la posición y el tiempo de procesamiento es insignificante
       <hr>
       <input type="radio" name="q33" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
      <div class="borde">
        <h4>34- ¿En qué consiste el "Post Proceso"?</h4>
        <hr>
-       <input type="radio" name="q34" value="a">a- Con una Helmert 3D
+       <input type="radio" name="q34" value="a">a- Se refiere a las aplicaciones en las cuales los datos se procesan despúes de la observación, es posible combinar medidas de varios receptores con más de una época de observación
        <hr>
        <input type="radio" name="q34" value="b">b- Por el método de Mínimos Cuadrados
        <hr>
        <input type="radio" name="q34" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
      </div>
       <div class="borde">
-        <h4>35- ¿En qué consiste el "Tiempo Real"?</h4>
+        <h4>35- ¿Cúales son las características de la técnica "Topografía" en posicionamiento por satélite?</h4>
         <hr>
         <input type="radio" name="q35" value="a">a- Con una Helmert 3D
         <hr>
         <input type="radio" name="q35" value="b">b- Por el método de Mínimos Cuadrados
         <hr>
-        <input type="radio" name="q35" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+        <input type="radio" name="q35" value="c">c- Su objetivo principal es el posicionamiento, se caracteriza por alta precisión y Observaciones estáticas y postproceso
       </div>
        <div class="borde">
-         <h4>36- ¿Cúal es la diferencia entre "Topografía y Navegación"?</h4>
+         <h4>36- ¿Cúales son las características de la técnica "Navegación" en posicionamiento por satélite</h4>
          <hr>
          <input type="radio" name="q36" value="a">a- Con una Helmert 3D
          <hr>
-         <input type="radio" name="q36" value="b">b- Por el método de Mínimos Cuadrados
+         <input type="radio" name="q36" value="b">b- Determina posición, velocidad y orientación de objetos en movimiento, requiere precisiones inferiores, pero el procesamiento de las observaciones cinemáticas es en tiempo real
          <hr>
          <input type="radio" name="q36" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
        </div>
