--- a/index.html
+++ b/index.html
@@ -152,29 +152,29 @@
     <div class="borde">
       <h4>15- ¿Qué son las torres BILBY?</h4>
       <hr>
-      <input type="radio" name="q15" value="a">a- Torres de observación topográfica especiales, debido a que su uso de Triangulación se veía limitada por la línea de visión, los Geomensores debían subir a cimas de montañas
+      <input type="radio" name="q15" value="a">a- Son Torres de observación topográfica especiales para Triangulación 
       <hr>
-      <input type="radio" name="q15" value="b">b- Por el método de Mínimos Cuadrados
+      <input type="radio" name="q15" value="b">b- Su uso se veía limitado por la línea de visión y los Geomensores debían subir a cimas de montañas
       <hr>
       <input type="radio" name="q15" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
     <div class="borde">
       <h4>16- ¿Cúal era el principal problema del uso de la técnica-óptica?</h4>
       <hr>
-      <input type="radio" name="q16" value="a">a- Con una Helmert 3D
+      <input type="radio" name="q16" value="a">a- Un cielo claro simultáneamente en un mínimo de 2 sitios de observación separadas por algunos km
       <hr>
-      <input type="radio" name="q16" value="b">b- Un cielo claro simultáneamente en un mínimo de 2 sitios de observación separadas por algunos km y el Equipamiento era enorme y costoso
+      <input type="radio" name="q16" value="b">b-  El Equipamiento era enorme y costoso
       <hr>
       <input type="radio" name="q16" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
     <div class="borde">
       <h4>17- ¿Cómo se define "Posicionamiento por Satélite"?</h4>
       <hr>
-      <input type="radio" name="q17" value="a">a- Con una Helmert 3D
+      <input type="radio" name="q17" value="a">a- Es la determinación de Puntos de observación por medio de satélites artificiales
       <hr>
-      <input type="radio" name="q17" value="b">b- Por el método de Mínimos Cuadrados
+      <input type="radio" name="q17" value="b">b- Se asume que las posiciones de los satélites son conocidas en todas las épocas
       <hr>
-      <input type="radio" name="q17" value="c">c- Es la determinación de Puntos de observación por medio de satélites artificiales, se asume que las posiciones de los satélites son conocidas en todas las épocas
+      <input type="radio" name="q17" value="c">c- otro
     </div>
     <div class="borde">
       <h4>18- ¿Cómo se define "GNSS"?</h4>
@@ -197,11 +197,11 @@
     <div class="borde">
       <h4>20- ¿Qué son las Pseudodistancias "r"?</h4>
       <hr>
-      <input type="radio" name="q20" value="a">a- Son las cantidades medidas entre el Receptor y Satélite, Representan la Distancia Geométrica + una Corrección de distancia "p" resultante del Error del reloj del receptor "sesgo"   
+      <input type="radio" name="q20" value="a">a- Son las cantidades medidas entre el Receptor y Satélite   
       <hr>
-      <input type="radio" name="q20" value="b">b- Por el método de Mínimos Cuadrados
+      <input type="radio" name="q20" value="b">b- Representan la Distancia Geométrica + una Corrección de distancia "p" resultante del Error del reloj del receptor "sesgo"
       <hr>
-      <input type="radio" name="q20" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+      <input type="radio" name="q20" value="c">c- otro
     </div>
     <div class="borde">
       <h4>21- ¿Cúantas Pseudodistancias son necesarias para resolver las ecuaciones de Posición mediante satélites?</h4>
@@ -215,27 +215,27 @@
     <div class="borde">
       <h4>22- ¿Cúales eran los problemas de los primeros sistemas satelitales?</h4>
       <hr>
-      <input type="radio" name="q22" value="a">a- Con una Helmert 3D
+      <input type="radio" name="q22" value="a">a- Grandes brechas de tiempo entre 2 pasadas por el mismo lugar
       <hr>
-      <input type="radio" name="q22" value="b">b- Grandes brechas de tiempo entre 2 pasasdas por el mismo lugar y Baja precisión de navegación, en particular la determinación era pobre
+      <input type="radio" name="q22" value="b">b- Baja precisión de navegación, en particular la determinación era pobre
       <hr>
       <input type="radio" name="q22" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
     <div class="borde">
       <h4>23- ¿Qué son los Sistemas de Aumentación?</h4>
       <hr>
-      <input type="radio" name="q23" value="a">a- Estos sistemas "Aumentan" la órbita terrestre media "MEO" con satélites Geoestacionarios "GEO", se complementan con Sistemas de aumentación basados en el espacio "SBAS" o Sistemas de aumentación basado en tierra "GBAS" 
+      <input type="radio" name="q23" value="a">a- Estos sistemas "Aumentan" la órbita terrestre media "MEO" con satélites Geoestacionarios "GEO"
       <hr>
-      <input type="radio" name="q23" value="b">b- Por el método de Mínimos Cuadrados
+      <input type="radio" name="q23" value="b">b- se complementan con Sistemas de aumentación basados en el espacio "SBAS" o Sistemas de aumentación basado en tierra "GBAS"
       <hr>
       <input type="radio" name="q23" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
     <div class="borde">
       <h4>24- ¿En qué consiste el "Almanaque"?</h4>
       <hr>
-      <input type="radio" name="q24" value="a">a- Información sobre el estado del GNSS y datos a los usuarios, contiene el estado de la constelación, cortes programados y datos orbitales adecuados para hacer predicciones de visibilidad del satélite y efemérides precisas adecuadas para posicionamientos precisos
+      <input type="radio" name="q24" value="a">a- Información sobre el estado del GNSS y datos a los usuarios, 
       <hr>
-      <input type="radio" name="q24" value="b">b- Por el método de Mínimos Cuadrados
+      <input type="radio" name="q24" value="b">b- contiene el estado de la constelación, cortes programados y datos orbitales adecuados para hacer predicciones de visibilidad del satélite y efemérides precisas adecuadas para posicionamientos precisos
       <hr>
       <input type="radio" name="q24" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
@@ -296,11 +296,11 @@
     <div class="borde">
       <h4>31- ¿En qué consiste el "Posicionamiento Relativo"?</h4>
       <hr>
-      <input type="radio" name="q31" value="a">a- Con una Helmert 3D
+      <input type="radio" name="q31" value="a">a- Es posible si se utilizan 2 receptores y 2 mediciones "Código y Fase" a los mismos satélites y simultáneamente en 2 sitios
       <hr>
-      <input type="radio" name="q31" value="b">b- Por el método de Mínimos Cuadrados
+      <input type="radio" name="q31" value="b">b- las mediciones son combinadas directamente, mejorando aún más la precisión de la posición
       <hr>
-      <input type="radio" name="q31" value="c">c- Es posible si se utilizan 2 receptores y 2 mediciones "Código y Fase" a los mismos satélites y simultáneamente en 2 sitios, las mediciones son combinadas directamente, mejorando aún más la precisión de la posición
+      <input type="radio" name="q31" value="c">c- otro
     </div>
     <div class="borde">
       <h4>32- ¿Cúal es la diferencia entre el "Posicionamiento Estático y Posicionamiento Cinemático" ?</h4>
@@ -314,9 +314,9 @@
     <div class="borde">
       <h4>33- ¿Cúales son las características del "Tiempo Real"?</h4>
       <hr>
-      <input type="radio" name="q33" value="a">a- Con una Helmert 3D
+      <input type="radio" name="q33" value="a">a- Los resultados son "instantáneos" en campo si los observables de 1 sola época se utilizan para el cálculo de la posición
       <hr>
-      <input type="radio" name="q33" value="b">b- Los resultados son "instantáneos" en campo si los observables de 1 sola época se utilizan para el cálculo de la posición y el tiempo de procesamiento es insignificante
+      <input type="radio" name="q33" value="b">b-  El tiempo de procesamiento es insignificante
       <hr>
       <input type="radio" name="q33" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
