hasta la veinte
alternativas completadas

--- a/index.html
+++ b/index.html
@@ -156,16 +156,18 @@
       <hr>
       <input type="radio" name="q15" value="b">b- Su uso se veía limitado por la línea de visión y los Geomensores debían subir a cimas de montañas
       <hr>
-      <input type="radio" name="q15" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+      <input type="radio" name="q15" value="c">c- a y b son correctas
+      <hr>
+      <input type="radio" name="q15" value="d">d- Son monolitos para antenas CORES
     </div>
     <div class="borde">
-      <h4>16- ¿Cúal era el principal problema del uso de la técnica-óptica?</h4>
+      <h4>16- ¿Qué problema presentaba el uso de la "técnica-óptica"?</h4>
       <hr>
-      <input type="radio" name="q16" value="a">a- Un cielo claro simultáneamente en un mínimo de 2 sitios de observación separadas por algunos km
+      <input type="radio" name="q16" value="a">a- Un cielo claro simultáneamente en un mínimo de 2 sitios de observación separados por algunos km
       <hr>
       <input type="radio" name="q16" value="b">b-  El Equipamiento era enorme y costoso
       <hr>
-      <input type="radio" name="q16" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+      <input type="radio" name="q16" value="c">c- a y b son correctas
     </div>
     <div class="borde">
       <h4>17- ¿Cómo se define "Posicionamiento por Satélite"?</h4>
@@ -174,25 +176,25 @@
       <hr>
       <input type="radio" name="q17" value="b">b- Se asume que las posiciones de los satélites son conocidas en todas las épocas
       <hr>
-      <input type="radio" name="q17" value="c">c- otro
+      <input type="radio" name="q17" value="c">c- a y b son correctas
     </div>
     <div class="borde">
       <h4>18- ¿Cómo se define "GNSS"?</h4>
       <hr>
-      <input type="radio" name="q18" value="a">a- Con una Helmert 3D
+      <input type="radio" name="q18" value="a">a- Sistema de Navegación Global por Satélite, auna todos los sistemas de posicionamiento por satélite mundial; GPS, GLONAS, GALILEO, BEIDOU
       <hr>
-      <input type="radio" name="q18" value="b">b- Por el método de Mínimos Cuadrados
+      <input type="radio" name="q18" value="b">b- Sistema de Posicionamiento Global creado por USA
       <hr>
-      <input type="radio" name="q18" value="c">c- Sistema de Navegación Global por Satélite, auna todos los sistemas de posicionamiento por satélite mundial; GPS, GLONAS, GALILEO, BEIDOU
+      <input type="radio" name="q18" value="c">c- Sistema que contempla el segmento espacial, controlador y usuario
     </div>
     <div class="borde">
       <h4>19- ¿Porqué la "distancia medida" al Satélite difiere de la "distancia real" geométrica?</h4>
       <hr>
-      <input type="radio" name="q19" value="a">a- Con una Helmert 3D
+      <input type="radio" name="q19" value="a">a- Debido a que el tiempo astronómico UTF es relativo
       <hr>
       <input type="radio" name="q19" value="b">b- Los Receptores en tierra utilizan Relojes de cristales de bajo costo, que se ajustan "aproximadamente" a la hora del sistema, los Relojes en tierra están desfasados y a causa de éste desplazamiento difieren las distancias 
       <hr>
-      <input type="radio" name="q19" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
+      <input type="radio" name="q19" value="c">c- Debido a que los relojes presentan problemas de temperatura 
     </div>
     <div class="borde">
       <h4>20- ¿Qué son las Pseudodistancias "r"?</h4>
@@ -201,7 +203,7 @@
       <hr>
       <input type="radio" name="q20" value="b">b- Representan la Distancia Geométrica + una Corrección de distancia "p" resultante del Error del reloj del receptor "sesgo"
       <hr>
-      <input type="radio" name="q20" value="c">c- otro
+      <input type="radio" name="q20" value="c">c- a y b son correctas
     </div>
     <div class="borde">
       <h4>21- ¿Cúantas Pseudodistancias son necesarias para resolver las ecuaciones de Posición mediante satélites?</h4>
