--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-   <h2>Escoge una alternativa y revisa tu puntaje al final</h2>
+   <h2 class="titulo">Escoge una alternativa y revisa tu puntaje al final</h2>
 
   <form name="form" onsubmit="return score()">
     <div class="borde">
