--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-   <h3 class="titulo">Escoge una alternativa y revisa tu puntaje al final</h3>
+   <h3 class="titulo">Escoge la/s alternativa/s correctas y revisa tu puntaje al final</h3>
 
   <form name="form" onsubmit="return score()">
     <div class="borde">
